# FamilyTree

./: Familia Molina Prous.odt  README.md  my-family-tree.ged
familyTree/: Familia Molina Prous.docx  GEDCOM_EDITOR_PLAN.md  Molina-Prous.ged  gedcom-editor.html  my-family-tree.ged
familyTree/Aipperspach-Fernandez/: my-family-tree.ged
familyTree/Fernandez-Alvarez/: Fernandez-Alvarez.ged
familyTree/Molina-Prous/: Familia Molina Prous.odt
familyforest-specs/: familyforest-specification.md
familytree-cli/: README.md  familitree-cli-specs.md  pyproject.toml
familytree-cli/familytree_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
familytree-cli/ft/: __main__.py  cli.py  duplicates.py  index.py  output.py  person.py  relation.py  tree.py  validate.py
familytree-cli/ft/gedcom/: exporter.py  importer.py
familytree-specs/: familytree-specification.md  person.schema.json  relation.schema.json
gedcom-editor/: gedcom-editor.html
myExampleTree/.familytree/: familytree.json
personalMemories/Gregorio Molina Cepada/: Historia del Silo.docx
specs/familytree/: familytree-specification.md  familytree.schema.json  person.schema.json  persons-index.schema.json  relation.schema.json  relations-index.schema.json
