[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "familytree-cli"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "jsonschema>=4.21",
]

[project.scripts]
ft = "ft.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ft*"]
